# StochasticWassersteinBarycenters

./: README.md
c++/: CMakeLists.txt
c++/lib/LBFGS/: LBFGS.h
c++/lib/LBFGS/LBFGS/: LineSearch.h
c++/src/: image.h  main.cpp  optimizer.h  powercell.h  sampler.h  scene.h  site.h
matlab/: powercell_update.m  sample_powercell_density.m  sample_powercell_means.m  test.m  weight_update.m
